# LogLens

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  SKELETON.md
.github/workflows/: ci.yml
crates/ll-cli/: Cargo.toml
crates/ll-cli/src/: main.rs
crates/ll-core/: Cargo.toml
crates/ll-core/src/: lib.rs
crates/ll-core/src/ai/: claude.rs  mod.rs  ollama.rs  prompts.rs
crates/ll-core/src/clustering/: fingerprint.rs  grouper.rs  mod.rs
crates/ll-core/src/collector/: docker_collector.rs  file_collector.rs  mod.rs  stream_collector.rs  system_collector.rs
crates/ll-core/src/db/: queries.rs
crates/ll-core/src/db/migrations/: 0001_logs.sql  0002_clusters.sql
crates/ll-core/src/export/: json_export.rs  markdown_export.rs  mod.rs
crates/ll-core/src/models/: analysis.rs  cluster.rs  log_entry.rs  mod.rs  query.rs
crates/ll-core/src/normalizer/: format_detector.rs  json_parser.rs  kv_parser.rs  mod.rs  plaintext_parser.rs  stacktrace_detector.rs
crates/ll-core/src/plugin/: mod.rs  registry.rs
crates/ll-core/src/query/: ai_query.rs  engine.rs  fts.rs  mod.rs
crates/ll-core/src/timeline/: correlation.rs  mod.rs  spike_detector.rs
frontend/: index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ClustersView.tsx  LogsView.tsx  SettingsView.tsx  SourcesView.tsx  TimelineView.tsx
frontend/src/lib/: tauri.ts
frontend/src/stores/: clusterStore.ts  logStore.ts  settingsStore.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  clusters.rs  collector.rs  mod.rs  query.rs  settings.rs
