[package]
name    = "ll-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
reqwest       = { workspace = true }
chrono        = { workspace = true }
uuid          = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
async-trait   = { workspace = true }
futures-util  = { workspace = true }

notify                = "6"
notify-debouncer-full = "0.3"
bollard               = "0.18"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "migrate", "macros"] }
regex           = "1"
dashmap         = "6"
keyring         = { version = "3", features = ["apple-native", "windows-native", "linux-secret-service-rt-tokio-crypto-openssl"] }
glob            = "0.3"
strsim          = "0.11"
sha2            = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
